src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard Support Process</fullName>
        <description>This process is used to show the phases of the standard support Case</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold - Awaiting Customer</fullName>
        </values>
        <values>
            <fullName>On Hold - Awaiting Support</fullName>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Auto_response_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to mention wether the auto-response has been sent or not when the case has been created</description>
        <label>Auto-response Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_Account_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the Account Reference linked to a Case record.</description>
        <label>Account Reference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account_Reference__c.C_Account_Name__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account_Reference__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C_Concern__c</fullName>
        <description>This field is used to capture the Concern of the case.</description>
        <label>Concern</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>C_Question__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>MS In (Lampiris Stolen)</fullName>
                </value>
                <value>
                    <fullName>MS Out (Lampiris Stealer)</fullName>
                </value>
                <value>
                    <fullName>Transfer documents received</fullName>
                </value>
                <value>
                    <fullName>Explanations</fullName>
                </value>
                <value>
                    <fullName>Classic relocation</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>Encryption</fullName>
                </value>
                <value>
                    <fullName>Discount application</fullName>
                </value>
                <value>
                    <fullName>Intermediary bill</fullName>
                </value>
                <value>
                    <fullName>Reduced after regulation</fullName>
                </value>
                <value>
                    <fullName>Increase</fullName>
                </value>
                <value>
                    <fullName>Request for duplicate</fullName>
                </value>
                <value>
                    <fullName>Details</fullName>
                </value>
                <value>
                    <fullName>Balanced account activation</fullName>
                </value>
                <value>
                    <fullName>Deactivated after client request</fullName>
                </value>
                <value>
                    <fullName>Relocations</fullName>
                </value>
                <value>
                    <fullName>GRD index correction request</fullName>
                </value>
                <value>
                    <fullName>Overall explanations</fullName>
                </value>
                <value>
                    <fullName>Regularization (not for relocation)</fullName>
                </value>
                <value>
                    <fullName>Reimbursement explanations</fullName>
                </value>
                <value>
                    <fullName>Connection Cuzo</fullName>
                </value>
                <value>
                    <fullName>Retention - prospected by competitor</fullName>
                </value>
                <value>
                    <fullName>Retention - not prospected by competitor</fullName>
                </value>
                <value>
                    <fullName>Retention - Service</fullName>
                </value>
                <value>
                    <fullName>General Information</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Before provision</fullName>
                </value>
                <value>
                    <fullName>Attestations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_Date_Time_Escalated_Closed__c</fullName>
        <formula>IF(NOT(ISBLANK( T_Status_Changed_To_Escalated__c )),  T_Status_Changed_To_Escalated__c ,  ClosedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Escalated/Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>C_Detected_Language__c</fullName>
        <description>This field is used to Detect the Language of a Case record.</description>
        <label>Detected Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_Irrelevant_Reopen__c</fullName>
        <description>This field is used to track if the case was reopened for a wrong reason.</description>
        <formula>IF(ISPICKVAL(Status,&quot;Closed&quot;) &amp;&amp; (T_Date_Last_Outgoing_Email__c &lt;  T_Status_Changed_To_Re_opened__c), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Irrelevant Reopen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_Question__c</fullName>
        <description>This field is used to capture the Question linked to a Case record.</description>
        <label>Question</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>C_Service__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Clients</fullName>
                </value>
                <value>
                    <fullName>Isol</fullName>
                </value>
                <value>
                    <fullName>Looking for information</fullName>
                </value>
                <value>
                    <fullName>Mystery Switch</fullName>
                </value>
                <value>
                    <fullName>Screening B2C</fullName>
                </value>
                <value>
                    <fullName>CàB (Wallonie)</fullName>
                </value>
                <value>
                    <fullName>Payment Plan/ Clearance Plan</fullName>
                </value>
                <value>
                    <fullName>Reminder</fullName>
                </value>
                <value>
                    <fullName>I&apos;m the buyer</fullName>
                </value>
                <value>
                    <fullName>My amendment</fullName>
                </value>
                <value>
                    <fullName>GEEP/GEP/Marketing actions/Partners</fullName>
                </value>
                <value>
                    <fullName>Need explanation about my accounts</fullName>
                </value>
                <value>
                    <fullName>Modifying my consumption</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t receive my bill</fullName>
                </value>
                <value>
                    <fullName>Modifying my client details</fullName>
                </value>
                <value>
                    <fullName>Domiciliation</fullName>
                </value>
                <value>
                    <fullName>Explanations</fullName>
                </value>
                <value>
                    <fullName>Index</fullName>
                </value>
                <value>
                    <fullName>Need explanations/Contest my regularization (not for relocation)</fullName>
                </value>
                <value>
                    <fullName>Want a regularization</fullName>
                </value>
                <value>
                    <fullName>Connection issue</fullName>
                </value>
                <value>
                    <fullName>Client prospected by another provider</fullName>
                </value>
                <value>
                    <fullName>Client not prospected by another provider</fullName>
                </value>
                <value>
                    <fullName>Client wants to leave for service concerns</fullName>
                </value>
                <value>
                    <fullName>General information</fullName>
                </value>
                <value>
                    <fullName>Wood</fullName>
                </value>
                <value>
                    <fullName>Pellets</fullName>
                </value>
                <value>
                    <fullName>I terminate my contract</fullName>
                </value>
                <value>
                    <fullName>Searching for information</fullName>
                </value>
                <value>
                    <fullName>Social Tarif</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_Re_Open_Date_Time__c</fullName>
        <description>This field is used to capture the Date and Time of the opening or the re-opening of case.</description>
        <formula>IF(NOT(ISBLANK( T_Status_Changed_To_Re_opened__c )),  T_Status_Changed_To_Re_opened__c ,  CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time (Re-)Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>C_SPAM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if a case was created from a SPAM email (campaigning, etc).
It is necessary to flag cases which should not be taken into account in SLA calculations, among others.</description>
        <inlineHelpText>Must be checked if the Case was created by a SPAM email</inlineHelpText>
        <label>SPAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_Service__c</fullName>
        <description>This field is used to capture the Service linked to a Case record.</description>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Clients</fullName>
                </value>
                <value>
                    <fullName>Isol</fullName>
                </value>
                <value>
                    <fullName>I register/terminate</fullName>
                </value>
                <value>
                    <fullName>I&apos;m defaulted</fullName>
                </value>
                <value>
                    <fullName>I&apos;m moving in / out</fullName>
                </value>
                <value>
                    <fullName>My discount/Promotion</fullName>
                </value>
                <value>
                    <fullName>My down payments</fullName>
                </value>
                <value>
                    <fullName>My contractual/administrative/billing details</fullName>
                </value>
                <value>
                    <fullName>My payments</fullName>
                </value>
                <value>
                    <fullName>My regularization</fullName>
                </value>
                <value>
                    <fullName>My reimbursements</fullName>
                </value>
                <value>
                    <fullName>MyLampiris</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Wood</fullName>
                </value>
                <value>
                    <fullName>SPAM</fullName>
                    <isActive>false</isActive>
                    <label>SPAM</label>
                </value>
                <value>
                    <fullName>TBC</fullName>
                    <isActive>false</isActive>
                    <label>TBC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Case_Number__c</fullName>
        <description>This field is used to flag the Case Number as External Id.</description>
        <externalId>true</externalId>
        <label>Case Number (External Id)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Close_SLA_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to Close all SLA processes</description>
        <label>Close SLA Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_Count_Inbound_Emails__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to count inbound emails linked to a Case record.</description>
        <label>Count Inbound Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Count_Outbound_Emails__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to count outbound emails linked to a Case record.</description>
        <label>Count Outbound Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Count_Total_Emails__c</fullName>
        <description>This field is used to count all the emails linked to a Case record.</description>
        <formula>T_Count_Inbound_Emails__c +  T_Count_Outbound_Emails__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Total Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Date_Last_Incoming_Email__c</fullName>
        <description>This field is used to retrieve the Date of the Last Incoming Email on a Case record.</description>
        <label>Date Last Incoming Email</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>T_Date_Last_Outgoing_Email__c</fullName>
        <description>This field is used to retrieve the Date of the Last Outgoing Email on a Case record.</description>
        <label>Date Last Outgoing Email</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>T_Last_Inbound_Email_Id__c</fullName>
        <description>This field is used to store the Id of the last Inbound Email.</description>
        <label>Last Inbound Email Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Last_Outbound_Email_Id__c</fullName>
        <description>This field is used to store the Id of the last Outbound Email.</description>
        <label>Last Outbound Email Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_SLA_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to trigger the SLA pocess on the Case.</description>
        <label>SLA Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_Status_Changed_To_Escalated__c</fullName>
        <description>This field is used to store the date/time upon which the status was changed to &quot;Escalated&quot;</description>
        <label>Status Changed To Escalated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>T_Status_Changed_To_OnHold_Customer__c</fullName>
        <description>This field is used to store the date/time upon which the status was changed to &quot;On Hold - Awaiting Customer&quot;</description>
        <label>Status Changed To On Hold Customer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>T_Status_Changed_To_OnHold_Support__c</fullName>
        <description>This field is used to store the date/time upon which the status was changed to &quot;On Hold - Awaiting Support&quot;</description>
        <label>Status Changed To On Hold Support</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>T_Status_Changed_To_Re_opened__c</fullName>
        <description>This field is used to store the date/time upon which the status was changed to &quot;Re-opened&quot;</description>
        <label>Status Changed To Re-opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>T_Status_Changed_To_Working__c</fullName>
        <description>This field is used to store the date/time upon which the status was changed to &quot;Working&quot;</description>
        <label>Status Changed To Working</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>T_To_Address__c</fullName>
        <description>This field is used to retrieve the To Address from an Incoming Email on a Case record.</description>
        <inlineHelpText>If two addresses are displayed, please delete one in order to be able to answer to the client.</inlineHelpText>
        <label>To Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>T_Trigger_Inbound_Email_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to trigger the SLA on the incoming Email</description>
        <label>Trigger Inbound Email SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_Trigger_Outbound_Email_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to trigger the SLA on outgoing Emails.</description>
        <label>Trigger Outbound Email SLA</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>C_SPAM__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.C_Standard_Case</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>C_SPAM__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.C_Standard_Case</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>C_Newsletter_Mass_Mailing</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>C_SPAM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>T_To_Address__c</field>
            <operation>equals</operation>
            <value>keep-in-touch@lampiris.be</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.C_Standard_Case</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Newsletter / Mass-Mailing</label>
    </listViews>
    <listViews>
        <fullName>Credit_and_Collection_Case1</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>C_SPAM__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>C_Detected_Language__c</field>
            <operation>equals</operation>
            <value>Unknown</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>T_To_Address__c</field>
            <operation>notEqual</operation>
            <value>keep-in-touch@lampiris.be</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.C_Standard_Case</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Credit and Collection</value>
        </filters>
        <label>Credit and Collection</label>
        <language>en_US</language>
        <queue>Credit_and_Collection</queue>
    </listViews>
    <listViews>
        <fullName>Credit_and_Collection_FR</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>C_SPAM__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>C_Detected_Language__c</field>
            <operation>equals</operation>
            <value>FR</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>T_To_Address__c</field>
            <operation>notEqual</operation>
            <value>keep-in-touch@lampiris.be</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.C_Standard_Case</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Credit and Collection</value>
        </filters>
        <label>Credit and Collection FR</label>
        <language>en_US</language>
        <queue>Credit_and_Collection</queue>
        <sharedTo>
            <group>French_Speaking</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_and_Collection_NL</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>C_SPAM__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>C_Detected_Language__c</field>
            <operation>equals</operation>
            <value>NL,DE,EN</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>T_To_Address__c</field>
            <operation>notEqual</operation>
            <value>keep-in-touch@lampiris.be</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.C_Standard_Case</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Credit and Collection</value>
        </filters>
        <label>Credit and Collection NL</label>
        <language>en_US</language>
        <queue>Credit_and_Collection</queue>
        <sharedTo>
            <group>Dutch_Speaking</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>General_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>C_SPAM__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>C_Detected_Language__c</field>
            <operation>equals</operation>
            <value>FR</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>T_To_Address__c</field>
            <operation>notEqual</operation>
            <value>keep-in-touch@lampiris.be</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.C_Standard_Case</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>General</value>
        </filters>
        <label>General FR</label>
        <language>en_US</language>
        <queue>General</queue>
        <sharedTo>
            <group>French_Speaking</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>General_Case3</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>C_SPAM__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>C_Detected_Language__c</field>
            <operation>equals</operation>
            <value>Unknown</value>
        </filters>
        <filters>
            <field>T_To_Address__c</field>
            <operation>notEqual</operation>
            <value>keep-in-touch@lampiris.be</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.C_Standard_Case</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>General</value>
        </filters>
        <label>General</label>
        <language>en_US</language>
        <queue>General</queue>
    </listViews>
    <listViews>
        <fullName>General_NL_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>C_SPAM__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>C_Detected_Language__c</field>
            <operation>equals</operation>
            <value>NL,DE,EN</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>T_To_Address__c</field>
            <operation>notEqual</operation>
            <value>keep-in-touch@lampiris.be</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.C_Standard_Case</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>General</value>
        </filters>
        <label>General NL</label>
        <language>en_US</language>
        <queue>General</queue>
        <sharedTo>
            <group>Dutch_Speaking</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Move_Case1</fullName>
        <booleanFilter>(3 OR 5) AND 2 AND 4 AND 1 AND 6 AND 7</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>C_SPAM__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.C_Standard_Case</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Move</value>
        </filters>
        <filters>
            <field>T_To_Address__c</field>
            <operation>notEqual</operation>
            <value>keep-in-touch@lampiris.be</value>
        </filters>
        <filters>
            <field>C_Service__c</field>
            <operation>equals</operation>
            <value>I&apos;m moving in / out</value>
        </filters>
        <filters>
            <field>C_SPAM__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>C_Detected_Language__c</field>
            <operation>equals</operation>
            <value>Unknown</value>
        </filters>
        <label>Move</label>
        <language>en_US</language>
        <queue>Move</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Move_Fr</fullName>
        <booleanFilter>(1 OR 6) AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Move</value>
        </filters>
        <filters>
            <field>C_Detected_Language__c</field>
            <operation>equals</operation>
            <value>FR</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>T_To_Address__c</field>
            <operation>notEqual</operation>
            <value>keep-in-touch@lampiris.be</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.C_Standard_Case</value>
        </filters>
        <filters>
            <field>C_Service__c</field>
            <operation>equals</operation>
            <value>I&apos;m moving in / out</value>
        </filters>
        <label>Move Fr</label>
        <language>en_US</language>
        <queue>Move</queue>
        <sharedTo>
            <group>French_Speaking</group>
        </sharedTo>
    </listViews>
</CustomObject>